--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
                 <ul>
                     <li><i></i>姓名：赵双燕</li>
                     <li><i></i>性别：女</li>
-                    <li><i></i>出生日期：xxx年xx月xx日</li>
-                    <li><i></i>电话：18310742316</li>
-                    <li><i></i>邮箱：zsyzsybj@163.com</li>
-                    <li><i></i>毕业院校：河北科技师范学院</li>
-                    <li><i></i>专业：计算机网络技术</li>
-                    <li><i></i>政治面貌：党员</li>
+                    <li><i></i>电话：xxxxxxx</li>
+                    <li><i></i>邮箱：xxxxx</li>
+                    <li><i></i>毕业院校：xxxxx</li>
+                    <li><i></i>专业：xxxxx</li>
                 </ul>
                 <div class="sunflower animated fadeIn">
                     <img src="img/flower1.png" alt=""/><img src="img/flower2.png" alt=""/><img src="img/flower3.png" alt=""/>
@@ -71,7 +69,7 @@
                     </li>
                     <li>
                         <img src="img/tit_bg.png"><img src="img/lbx.png">
-                        <p>2016.5~2016.11<span>航天开元科技有限公司</span></p>
+                        <p>2016.6~2017.7<span>航天开元科技有限公司</span></p>
                         <div>
                             <label>职位：前端开发工程师</label>
                             主要负责页面切图与制作，完成页面特效以及数据交互，配合后台完成上线调整。</div>
